[package]
name = "chordpro"
version = "0.2.0-pre"
authors = ["José Luis C.D. <jlcd0003@red.ujaen.es>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/joseluiscd/chordpro-rs"
readme = "README.md"
description = "A Chordpro parser for Rust"
keywords = ["music", "chords"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2"
pest_derive = "^2"
serde = { version = "^1", features = ["derive"] }
num-traits = "^0.2"
num-derive = "^0.3"

[features]
default = []